# image-processing

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_rgb2gray.cc  benchmark_rgba2gray.cc
include/image-processing/color-convert/: color-convert.hpp
include/image-processing/color-convert/common/: algo-type.hpp  image-format.hpp  marco.hpp  mem-layout.hpp  vector-type.hpp
include/image-processing/color-convert/format/: image-format.hpp
include/image-processing/color-convert/kernels/: rgb2gray.hpp  rgba2gray.hpp
scripts/: generate-rgb.py  generate-rgba.py  generate-yuv.py
src/color-convert/: CMakeLists.txt
src/color-convert/kernels/: rgb2gray.cc  rgba2gray.cc
src/color-convert/kernels/cpu/: rgb2gray.cc  rgb2gray.hpp  rgba2gray.cc  rgba2gray.hpp  yuv2rgb.cc  yuv2rgb.hpp
src/color-convert/kernels/cuda/: rgb2gray.cu  rgb2gray.cuh  rgba2gray.cu  rgba2gray.cuh
tests/: CMakeLists.txt  test_image_format.cc  test_rgb2gray.cc  test_rgba2gray.cc
